--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -1,8 +1,6 @@
 @use 'sass:color';
-
-@use '@material/theme/color-palette';
-
 // Svelte Colors!
+@use '@material/theme/color-palette';
 @use '@material/theme/index' as theme with (
   $primary: #ff3e00,
   $secondary: #676778,
@@ -10,6 +8,11 @@
   $background: #fff,
   $error: color-palette.$red-900
 );
+
+
+@use '@material/typography/mdc-typography';
+@use '@material/typography/index' as typography;
+
 
 html,
 body {
@@ -61,4 +64,54 @@ ul.top-menu  {
 .card-container {
   display: flex;
   justify-content: center;
+}
+ 
+html {
+  @include typography.typography('body1');
+}
+ 
+h1 {
+  @include typography.typography('headline1');
+}
+ 
+h2 {
+  @include typography.typography('headline2');
+}
+ 
+h3 {
+  @include typography.typography('headline3');
+}
+ 
+h4 {
+  @include typography.typography('headline4');
+}
+ 
+h5 {
+  @include typography.typography('headline5');
+}
+ 
+h6 {
+  @include typography.typography('headline6');
+}
+ 
+caption {
+  @include typography.typography('caption');
+}
+ 
+code,
+pre {
+  font-family: 'Roboto Mono', monospace;
+}
+ 
+small {
+  font-size: 0.9em;
+}
+ 
+big {
+  font-size: 1.1em;
+}
+ 
+b,
+strong {
+  font-weight: bold;
 }
