--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -32,6 +32,10 @@ h1 {
   text-align: center;
 }
 
+.center {
+  text-align: center;
+}
+
 .menu-container {
   display: flex;
   justify-content: center;
